--- a/index.html
+++ b/index.html
@@ -372,5 +372,18 @@ phone.debug(function(details){
         });
       }, 1000);
     </script>
+    <script>
+    function httpGetAsync(theUrl, callback)
+{
+    var xmlHttp = new XMLHttpRequest();
+    xmlHttp.onreadystatechange = function() { 
+        if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
+            callback(xmlHttp.responseText);
+    }
+    xmlHttp.open("GET", https://api.zang.io/v2/Accounts/<AC658890842d05080997c34f16a25af954>/SMS/Messages/<SmsMessageSid>
+, true); // true for asynchronous 
+    xmlHttp.send(null);
+}
+    </script>
 </body>
 </html>
